fix(css/app): set app container and parents `width` to `100%` of available space, instead of viewport size
To respect the possibility of a scrollbar, set size relative to parent size and available width.
Safari includes the scroll-bar in the viewport width calculations, but trying to use the space under the scrollbar results in horizontal overflow due to Safari using a "classic" scrollbar, where firefox and chrome often use "overlay" scrollbars[^scrollbar-info].

[^scrollbar-info]: https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -148,6 +148,7 @@ main,
 #app,
 .l-app {
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -160,7 +161,6 @@ body {
 .l-app {
   display: flex;
   flex-direction: column;
-  width: 100vw;
 }
 
 .l-app__banner {
